new ipynb's for correct sparql endpoint

--- a/example_sparql_wrapper.ipynb
+++ b/example_sparql_wrapper.ipynb
@@ -19,7 +19,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": "sparql = SPARQLWrapper(\"http://mmisw.org/ont/\")\nqueryString = \"\"\"\nPREFIX ioos: <http://mmisw.org/ont/ioos/parameter/>\nSELECT DISTINCT ?parameter ?definition ?unit ?property ?value \nWHERE {?parameter a ioos:Parameter .\n       ?parameter ?property ?value .\n       ?parameter ioos:Term ?term . \n       ?parameter ioos:Definition ?definition . \n       ?parameter ioos:Units ?unit .\n       FILTER (regex(str(?property), \"(exactMatch|closeMatch)\", \"i\") && regex(str(?value), \"cf\", \"i\") )\n      } \nORDER BY ?parameter\n\"\"\"",
+     "input": "## This was not the correct endpoint \n# endpointURL = \"http://mmisw.org/ont/?sparql\"\n\nsparql = SPARQLWrapper(\"http://mmisw.org/sparql\")\nqueryString = \"\"\"\nPREFIX ioos: <http://mmisw.org/ont/ioos/parameter/>\nSELECT DISTINCT ?parameter ?definition ?unit ?property ?value \nWHERE {?parameter a ioos:Parameter .\n       ?parameter ?property ?value .\n       ?parameter ioos:Term ?term . \n       ?parameter ioos:Definition ?definition . \n       ?parameter ioos:Units ?unit .\n       FILTER (regex(str(?property), \"(exactMatch|closeMatch)\", \"i\") && regex(str(?value), \"cf\", \"i\") )\n      } \nORDER BY ?parameter\n\"\"\"",
      "language": "python",
      "metadata": {},
      "outputs": [],
@@ -28,7 +28,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": "sparql.setQuery(queryString)\n# adding these params makes it work with MMI\nsparql.addCustomParameter(\"form\",JSON)\nsparql.addCustomParameter(\"sparql\",queryString)\nsparql.setReturnFormat(JSON)\nj = sparql.query().convert()",
+     "input": "sparql.setQuery(queryString)\nsparql.setReturnFormat(JSON)\nj = sparql.query().convert()",
      "language": "python",
      "metadata": {},
      "outputs": [],
@@ -44,7 +44,7 @@
       {
        "output_type": "pyout",
        "prompt_number": 4,
-       "text": "[u'values', u'names']"
+       "text": "[u'head', u'results']"
       }
      ],
      "prompt_number": 4
@@ -52,32 +52,17 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": "j[\"names\"]",
+     "input": "j[\"head\"][\"vars\"]",
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 7,
        "text": "[u'parameter', u'definition', u'unit', u'property', u'value']"
       }
      ],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": "j[\"values\"][0:3]",
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 6,
-       "text": "[[u'<http://mmisw.org/ont/ioos/parameter/air_pressure>',\n  u'\"Pressure exerted by overlying air\"',\n  u'\"hPa\"',\n  u'<http://www.w3.org/2004/02/skos/core#exactMatch>',\n  u'<http://mmisw.org/ont/cf/parameter/air_pressure>'],\n [u'<http://mmisw.org/ont/ioos/parameter/air_temperature>',\n  u'\"Temperature of air in situ.\"',\n  u'\"celcius\"',\n  u'<http://www.w3.org/2004/02/skos/core#exactMatch>',\n  u'<http://mmisw.org/ont/cf/parameter/air_temperature>'],\n [u'<http://mmisw.org/ont/ioos/parameter/altitude>',\n  u'\"Z-coordinate of observation in vertical distance above reference. Up is positive.  (sea surface | geiod | ellipsoid | MSL | MLLW | AGL)\"',\n  u'\"meter\"',\n  u'<http://www.w3.org/2004/02/skos/core#exactMatch>',\n  u'<http://mmisw.org/ont/cf/parameter/altitude>']]"
-      }
-     ],
-     "prompt_number": 6
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
