--- a/example_csw_ngdc_geoportal.ipynb
+++ b/example_csw_ngdc_geoportal.ipynb
@@ -30,7 +30,7 @@
      "metadata": {},
      "outputs": [
       {
-       "html": "<iframe src=http://geoport.whoi.edu/geoportal/ width=950 height=400></iframe>",
+       "html": "<iframe src=http://www.ngdc.noaa.gov/geoportal/ width=950 height=400></iframe>",
        "output_type": "pyout",
        "prompt_number": 2,
        "text": "<IPython.core.display.HTML at 0x80949e8>"
